feat: add implementation of business rules, queries and endpoint for calculate amount (value - cost)